# maxrank

./: .gitignore  CMakeLists.txt  Prep_MaxRank.ipynb  README.md  maxrank.rar.old
examples/Paper2D/: Results.txt  data.txt
examples/Test3D50/: ResultsBF250.txt  data.txt
examples/Test4D250/: ResultsBF500.txt  data.txt  query.txt
include/: Objects.h  QuadTree.h  Query.h  S3.h  arentry.h  cachemem.h  collection.h  filemem.h  global.h  hypercube.h  iomeasure.h  line2d.h  mainmem.h  mem.h  param.h  point.h  psdraw.h  random.h  rentry.h  rnode.h  rstartree.h  rtree.h  search.h  tgs.h  virtualRnode.h
lib/: Query.cc  collection.cc  filemem.cc  hypercube.cc  iomeasure.cc  line2d.cc  mainmem.cc  point.cc  psdraw.cc  rentry.cc  rnode.cc  rstartree.cc  rtree.cc  search.cc  tgs.cc  virtualRnode.cc
src/: NormalizeAndExpand.cpp  PointToRectangle.cpp  QuadTree.cpp  S3.cc  arentry.cc  atgstest.cc  atgstestp.cc  cachemem.cc  line2Dtest.cc  linesegtest.cc  myQuadTree.cpp  param.cc  rstartreetest.cc  rtreetest.cc  tgstest.cc  tgstestp.cc
